--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
       name="Hrishi | Portfolio"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Hrishi | Portfolio" />
+    <meta property="og:title" content="Shivam.JS | Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hrishi1999.github.io/" />
+    <meta property="og:url" content=" " />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -53,7 +53,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hrishi | Portfolio</title>
+    <title>Shivam.JS | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
